# orderbook-streamer

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/client/: grpc_client.rs
src/models/: consts.rs  errors.rs  mapper.rs  messages.rs  mod.rs  stream.rs  stream_service.rs
src/server/: grpc_server.rs
src/tests/: mod.rs  stream_tests.rs
