[package]
name = "crypto-streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
tokio-stream = "0.1.11"
dotenv = "0.15.0"
log = "0.4.11"
anyhow = "1.0.33"
thiserror = "1.0.20"
stackdriver_logger = "0.8.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
url = "2.2.2"
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"]}
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures        = "0.3.21"
clap = { version = "4.0.18", features = ["derive"] }
prost = "0.11.0"
tonic = "0.8.2"
protoc = "2.28.0"
enum-display-derive = "0.1.1"

[build-dependencies]
tonic-build = "0.8.2"
